Feat: Small revision

--- a/css/site.css
+++ b/css/site.css
@@ -15,6 +15,7 @@
 body{
     background-color: aquamarine;
     background-image: url("https://static.thenounproject.com/png/3181734-200.png");
+    background-size: 17%;
     background-position: right;
     background-repeat: no-repeat;
     background-attachment: fixed;
