--- a/css/site.css
+++ b/css/site.css
@@ -27,6 +27,10 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+
+a:link{
+    color:#FD4D3F;
+}
 ul{
     text-align: center;
     list-style: inside;
