Feat: login page

--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,7 @@ body, html {
 form {
     /* This form should be separated from other elements by 1em */
     /* There must be 1em between the content and the border of this element */
+    margin:1em;
     padding:1em;
     vertical-align: middle;
 }
@@ -22,7 +23,7 @@ fieldset {
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     padding:1em;
-    border: 0;
+    border: none;
     background-color: white;
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
@@ -42,7 +43,8 @@ fieldset {
     /* This element must use 100% of the width */
     width:100%;
     /* It should have a separation of .5em from elements on top of it and below it*/
-    padding-top: .5em;
+    margin-top:.5em;
+    margin-bottom: .5em;
 }
 
 .form-label {
@@ -69,17 +71,15 @@ fieldset {
 
 .form-control {
     /* There must be 4px on top of the text and below the text of an input with this class */
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px;
     /* It should have a separation of .5em from elements on top of it and below it */
-    padding-top: .5em;
-    padding-bottom: .5em;
+    margin:.5em 0;
 
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
+    width:calc(100% - 4px);
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
 }
 
 
