Feat: css updates

--- a/css/messages.css
+++ b/css/messages.css
@@ -8,7 +8,7 @@ body, html {
 
 .messagemessage-info {
     border-radius: 10px;
-    background: lightblue;
+    background: #5e053b;
     font-weight: bold;
     padding:10px;
     width: 70%;
