--- a/css/twitter.css
+++ b/css/twitter.css
@@ -6,9 +6,12 @@
     --separator-color: #DDD;
     --marginprofile: width: calc(100% - 30px);
 }
+
 * {
     box-sizing: border-box;
 }
+
+
 body, html {
     background-color: var(--main-bg);
     height: 100%;
@@ -17,9 +20,11 @@ body, html {
     padding: 0;
     font-family: Arial, Ubuntu, sans-serif;
 }
+
 .container {
-    margin: 2em;
+    margin-top: 2em;
 }
+
 header {
     background-image: url("https://picsum.photos/1200/300");
     background-size: cover;
@@ -29,15 +34,16 @@ header {
     display: inline-block;
 
 }
+
 a {
     color: var(--link-color);
 }
+
 .top-nav {
     background: var(--light-bg);
-    display: inline-block;
     position:fixed;
-    z-index: 1000;
     width: 100%;
+    z-index: 1001;
 }
 .nav {
     list-style-type: none;
@@ -53,34 +59,55 @@ a {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
-    display: inline-block;
 }
+
 .nav-link:hover {
     color: var(--link-color);
 }
+
 .profile {
     background: var(--light-bg);
     height: 80px;
 }
-.profile-details {
-    margin:0 .5em;
-    width: calc(25% - 1em);
-}
+
 .profile-entry {
     margin:.5em;
 }
-/*
-remove profile-items???
 
-Finally, remove the bullets and the padding from profile-items. Add a margin of .5em to the profile-entry class.
+.profile-items {
+    list-style: none;
+    padding:0;
+}
 
- */
+.profile-entry{
+    margin:.5em;
+}
+
 .profile-image {
     position:absolute;
-    top:300px;
+    top:14.5em;
+
+}
+.profile-details {
+    float:left;
+    margin:0 .5em;
+    width: calc(25% - 1em);
+}
+
+.who-to-follow {
+    float:left;
+    margin:0 .5em;
+    width: calc(25% - 1em);
+}
+
+.timeline{
+    float:left;
+    margin:0 .5em;
+    width: calc(100% - 1em);
 }
 .profile-form {
     float: right;
+    line-height: 80px;
 }
 .btn {
     border: 1px solid var(--main-link-color);
@@ -98,10 +125,7 @@ Finally, remove the bullets and the padding from profile-items. Add a margin of 
     border-radius: 100%;
     border: 4px solid var(--light-bg);
 }
-.timeline{
-    margin:0 .5em;
-    width: calc(100% - .5em);
-}
+
 .text-right {
     text-align: right;
 }
@@ -109,20 +133,13 @@ Finally, remove the bullets and the padding from profile-items. Add a margin of 
     color: var(--main-link-color);
 }
 
-.who-to-follow {
-    margin:0 .5em;
-    width: calc(25% - .5em);
-}
+
 .media {
     width: 100%;
     background-color:var(--light-bg);
-    border-bottom: 1px;
-    border-color: var(--separator-color);
-    /*
-    Its background color should be light-bg??
-     */
+    border-bottom: 1px solid var(--separator-color);
     padding: .5em;
-    overflow:visible;
+    overflow:auto;
 }
 .media-image {
     max-width: 50px;
@@ -131,8 +148,8 @@ Finally, remove the bullets and the padding from profile-items. Add a margin of 
 }
 
 .media-body{
-    float: outside;
-    width: calc(100% - .5em);
+    float: left;
+    width: calc(100% - 50px);
 }
 .img-circle .profile-image {
     position: absolute;
