--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -52,7 +52,7 @@ section:nth-of-type(1) {
     background: lightgreen;
     /* enter needed declarations here */
     /*align-tems:center;*/
-    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 section:nth-of-type(1) div:last-child {
