--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -36,9 +36,7 @@ body {
     border-radius: 5px;
     /* TODO: Add an automatic margin and a flex container to this selector */
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width:80%
+    margin:auto;
 
 }
 
