--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -32,6 +32,7 @@ a {
     border-radius: 4px;
     text-align: center;
     /*  TODO: Change this flex items basis to 100% of the page  */
+    flex-basis: 100%;
 }
 
 .card-title {
