--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -2,12 +2,27 @@
     box-sizing: border-box;
 }
 
+body {
+    margin:0;
+}
+
 .nav {
-    background-color: #2E383B;
-    /*justify-content: center;*/
+    background-color: lightgray;
+    justify-content: space-between;
     display: flex;
-    align-items: baseline;
-    width:100%;
+    /*align-items: baseline;*/
+    /*width:100%;*/
+}
+
+header nav a {
+    color:black;
+    text-decoration: none;
+    display: inline-block;
+    padding: .5em;
+}
+
+header nav a:hover {
+    color: blue;
 }
 
 .item1 {
@@ -18,8 +33,9 @@
 
 .item2 {
     display: flex;
-    justify-content: center;
-    position: center;
+    font-size: 3em;
+    padding: .2em 0 .2em 0;
+    position:absolute;
 }
 
 .item3 {
@@ -27,8 +43,13 @@
     margin-left:auto;
 }
 
+
+
+
+
+
 a:link{
-    color:cyan;
+    color: #E6ECF0;
 }
 
 .fas {
@@ -36,8 +57,15 @@ a:link{
     padding:.5em;
 }
 
+header nav .nav-bar-logo {
+    position: absolute;
+    width:100%;
+    text-align: center;
+
+}
+
 a:visited {
-    color:blue;
+    color: #E6ECF0;
 }
 
 a {
@@ -49,19 +77,25 @@ ul {
     padding: 0;
     margin:0;
     display: flex;
+    align-items: center;
 }
 
-nav a {
-    text-decoration: none;
-    display: inline-block;
+
+
+li {
     padding: .5em;
-}
-
-.logo {
-    font-family: "Montserrat";
-    font-size: 3em;
-    padding: .2em 0 .2em 0;
-    display: inline-block;
-    flex-basis: content-box;
 
 }
+
+ul:not(.nav-bar-logo){
+    z-index:100;
+}
+
+/*.logo {*/
+/*    font-family: "Montserrat";*/
+/*    font-size: 3em;*/
+/*    padding: .2em 0 .2em 0;*/
+/*    display: inline-block;*/
+/*    flex-basis: content-box;*/
+
+/*}*/
