--- a/css/photons.css
+++ b/css/photons.css
@@ -1,148 +1,30 @@
-* {box-sizing: border-box;}
-
-body {
-    margin: 0;
-    padding: 0;
-    background: lightskyblue;
-    font-family: Chalkboard, sans-serif;
+* {
+    box-sizing: border-box;
 }
 
-h1 {text-align: center;}
-
-h2, h3 {
-    padding: 0;
-    margin: 0;
-    /*flex-grow: 3;*/
-}
-
-.container {
-    margin: 0 auto;
-    width: 80%;
-}
-
-.green-box {
-    background: green;
-    height: 1em;
-    width: 2em;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.border {border: 2px solid black;}
-
-.card {
-    width: 100%;
-    height: 100%;
-    background: white;
-    padding: 1em;
-    margin: 0 auto;
-    /* enter needed declarations here */
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-section {
-    /* enter needed declarations here */
+h2 {
     display: flex;
+    justify-content: center;
 }
 
-section:nth-of-type(1) {
-    height: 3em;
-    background: lightgreen;
-    /* enter needed declarations here */
-    /*align-tems:center;*/
-    align-items: center;
-    justify-content: space-between;
-}
-section:nth-of-type(1) div:last-child {
-    /* enter needed declarations here */
-    align-self: flex-start;
+.box1 {
+    display: inline-flex;
+    border: 2px solid gray;
+    min-width:0;
 }
 
-.purple-box {
-    background: fuchsia;
-    width: 3em;
-    height: 1em;
-    flex-grow: 1;
+.box2 {
+    display: inline-flex;
+    border: 2pc solid gray;
+    min-width:0;
 }
-
-.purple-box:nth-of-type(1) {
-    /* enter needed declarations here */
-    flex-direction: row;
+img {
     display: flex;
-    flex-grow: 3;
+    min-width:0;
 }
-
-.purple-box:nth-of-type(2) {
-    /* enter needed declarations here */
-    flex-grow: 2;
-}
-
-.blue-box {
-    width: 100%;
-    background: blue;
-    height: 10em;
-}
-
-section:nth-of-type(3) {
-    /* enter needed declarations here */
-    align-items: center;
-    justify-content: space-around;
-}
-
-section:nth-of-type(3) h3 {
-    /* enter needed declarations here */
-    flex-grow: 1;
-}
-
-.orange-circle {
-    background: orange;
-    width: 2em;
-    height: 2em;
-    border-radius: 1em;
-    margin: .5em;
-}
-
-.large-brown-box {
-    height: 5em;
-    width: 5em;
-    background: brown;
-    /* enter needed declarations here */
-    flex-grow: 1;
-}
-
-.large-brown-box:nth-of-type(2) {
-    margin: 0 1em;
-    justify-content: space-around;
-}
-
-section:nth-of-type(5) {
-    /* enter needed declarations here */
+.nav{
+    display: flex;
+    justify-content: center;
     justify-content: space-evenly;
-}
-
-.yellow-box {
-    background: yellow;
-    width: 2em;
-    height: 2em;
-}
-
-section:nth-of-type(6) {
-    background: coral;
-    height: 14em;
-    /* enter needed declarations here */
-    flex-wrap: wrap;
-    align-items:center;
-    justify-content: space-between;
-}
-
-.grey-box {
-    background: grey;
-    width: 3em;
-    height: 3em;
-}
-
-.grey-box:nth-of-type(odd) {
-    height: 4em;
+    margin: 1em;
 }
